--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,27 @@
-.App {
-  text-align: center;
+body{
+  background-image: url('./assets/background.jpg');
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
+    height: 100vh;
+    min-width: 230px;
+    max-width: 550px;
 }
 
+.container{
+  width: 45%;
+  text-align: justify;
+  position: absolute;
+  top:20px;
+  left: 25%;
+  color: white;
+  box-sizing: border-box;
+  background: rgba(61, 58, 58, 0.8);
+  border-radius: 10px;
+  padding: 1rem;
+  margin: 1rem;
+  
+}
 .App-logo {
   height: 40vmin;
   pointer-events: none;
@@ -35,4 +55,107 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.loader {
+  margin: 100px auto;
+  font-size: 25px;
+  color:#282c34;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  position: relative;
+  text-indent: -9999em;
+  animation: load5 1.1s infinite ease;
+  transform: translateZ(0);
+}
+@keyframes load5 {
+
+  0%,
+  100% {
+    box-shadow: 0em -2.6em 0em 0em #5843a9, 1.8em -1.8em 0 0em rgba(253, 1, 1, 0.2), 2.5em 0em 0 0em rgba(70, 119, 100, 0.2), 1.75em 1.75em 0 0em rgba(145, 43, 43, 0.2), 0em 2.5em 0 0em rgba(84, 68, 172, 0.2), -1.8em 1.8em 0 0em rgba(151, 23, 23, 0.2), -2.6em 0em 0 0em rgba(134, 134, 239, 0.5), -1.8em -1.8em 0 0em rgba(92, 115, 229, 0.7);
+  }
+
+  12.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(229, 182, 182, 0.7), 1.8em -1.8em 0 0em #530b0b, 2.5em 0em 0 0em rgba(150, 102, 238, 0.2), 1.75em 1.75em 0 0em rgba(196, 122, 122, 0.2), 0em 2.5em 0 0em rgba(62, 55, 195, 0.2), -1.8em 1.8em 0 0em rgba(82, 82, 207, 0.2), -2.6em 0em 0 0em rgba(79, 72, 168, 0.2), -1.8em -1.8em 0 0em rgba(116, 73, 73, 0.5);
+  }
+
+  25% {
+    box-shadow: 0em -2.6em 0em 0em rgba(83, 88, 228, 0.543), 1.8em -1.8em 0 0em rgba(69, 36, 119, 0.7), 2.5em 0em 0 0em #ffffff, 1.75em 1.75em 0 0em rgba(84, 70, 70, 0.2), 0em 2.5em 0 0em rgba(37, 30, 134, 0.2), -1.8em 1.8em 0 0em rgba(38, 54, 172, 0.2), -2.6em 0em 0 0em rgba(219, 86, 86, 0.2), -1.8em -1.8em 0 0em rgba(78, 46, 141, 0.2);
+  }
+
+  37.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(33, 131, 192, 0.2), 1.8em -1.8em 0 0em rgba(89, 84, 185, 0.5), 2.5em 0em 0 0em rgba(255, 255, 255, 0.7), 1.75em 1.75em 0 0em #ffffff, 0em 2.5em 0 0em rgba(255, 255, 255, 0.2), -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2), -2.6em 0em 0 0em rgba(41, 7, 95, 0.2), -1.8em -1.8em 0 0em rgba(117, 163, 227, 0.2);
+  }
+
+  50% {
+    box-shadow: 0em -2.6em 0em 0em rgba(105, 18, 18, 0.2), 1.8em -1.8em 0 0em rgba(168, 115, 115, 0.2), 2.5em 0em 0 0em rgba(255, 255, 255, 0.5), 1.75em 1.75em 0 0em rgba(255, 255, 255, 0.7), 0em 2.5em 0 0em #ffffff, -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.2), -2.6em 0em 0 0em rgba(151, 82, 82, 0.2), -1.8em -1.8em 0 0em rgba(212, 122, 122, 0.2);
+  }
+
+  62.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(165, 85, 160, 0.2), 1.8em -1.8em 0 0em rgba(204, 197, 241, 0.2), 2.5em 0em 0 0em rgba(255, 255, 255, 0.2), 1.75em 1.75em 0 0em rgba(255, 255, 255, 0.5), 0em 2.5em 0 0em rgba(255, 255, 255, 0.7), -1.8em 1.8em 0 0em #ffffff, -2.6em 0em 0 0em rgba(250, 1, 1, 0.2), -1.8em -1.8em 0 0em rgba(7, 19, 183, 0.2);
+  }
+
+  75% {
+    box-shadow: 0em -2.6em 0em 0em rgba(3, 85, 249, 0.619), 1.8em -1.8em 0 0em rgba(242, 4, 4, 0.2), 2.5em 0em 0 0em rgba(255, 255, 255, 0.2), 1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2), 0em 2.5em 0 0em rgba(255, 255, 255, 0.5), -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.7), -2.6em 0em 0 0em #ebb7b7, -1.8em -1.8em 0 0em rgba(171, 61, 132, 0.2);
+  }
+
+  87.5% {
+    box-shadow: 0em -2.6em 0em 0em rgba(226, 93, 93, 0.2), 1.8em -1.8em 0 0em rgba(255, 255, 255, 0.2), 2.5em 0em 0 0em rgba(255, 255, 255, 0.2), 1.75em 1.75em 0 0em rgba(255, 255, 255, 0.2), 0em 2.5em 0 0em rgba(255, 255, 255, 0.2), -1.8em 1.8em 0 0em rgba(255, 255, 255, 0.5), -2.6em 0em 0 0em rgba(222, 221, 232, 0.7), -1.8em -1.8em 0 0em #9d7ce9;
+  }
+}
+
+.btn {
+  align-items: center;
+border: 1px solid rgb(247, 244, 244);
+  border-radius: 50px;
+  background: rgba(22, 22, 22, 0.975);
+  color: rgb(251, 248, 248);
+  font-size: 1.1rem;
+  font-weight: 600;
+  width: 70%;
+  margin: 5px auto;
+  outline: none;
+  padding: 11px 0;
+  text-align: center;
+  cursor: pointer;
+  -webkit-tap-highlight-color: transparent;
+}
+
+.btn:hover {
+  background: rgb(255, 255, 255);
+  color: rgba(0, 0, 0, 0.749);
+  border: 1px solid #000;
+}
+.btn:disabled{
+ background-color: rgb(114, 110, 110);
+ cursor:no-drop;
+}
+
+.start{
+  border: 1px solid rgb(247, 244, 244);
+    border-radius: 50px;
+    background: rgba(22, 22, 22, 0.975);
+    color: rgb(251, 248, 248);
+    font-size: 1.1rem;
+    font-weight: 600;
+    width: 30%;
+    margin: 5px auto;
+    outline: none;
+    padding: 11px 0;
+    text-align: center;
+    cursor: pointer;
+}
+.start:hover{
+  background: rgba(255, 255, 255, 0.995);
+    color: rgba(0, 0, 0, 0.749);
+    border: 1px solid #000;
+}
+
+.card{
+  align-items: center;
+}
+.next{
+  float:right;
+  text-align: center;
 }
